Include /.well-knonwn/security.txt